app.css: added will-change to blur container to o fix firefox layout issues to certain amount

--- a/elements/app/app.css
+++ b/elements/app/app.css
@@ -24,6 +24,7 @@ x-blur-container {
     align-items: center;
     justify-content: center;
     width: 100%;
+    will-change: transform;
 }
 
 header {
